# currency_converter

./: Cargo.toml  README.md
assets/: eurofxref.csv
src/: main.rs
src/rates/: mod.rs
