[package]
name = "currency_convertor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = [ "derive" ] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.145"
serde_json = "1.0"
